--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Metatags END -->
-   
+
     <title>Gastronomisk innovation</title>
-    
+
 <!-- *** Stylesheets -->
 	<link href="stylesheets/css.css" rel="stylesheet" type="text/css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -18,16 +18,16 @@
 <!-- Stylesheets END -->
 </head>
 	<body>
-			
+
 <div class="wrapper">
-	
-	<!-- *** Left side -->		
+
+	<!-- *** Left side -->
 	<div class="infobox">
 		<div class="logo"><img src="billeder/logohvid.png" alt=""/></div>
 		<div class="infocontent"></div>
 	</div>
-	
-	
+
+
 	<div class="rightwrapper">
 		<!-- *** Navigation -->
 		<div class="navigationwrapper">
@@ -41,36 +41,40 @@
 			</div>
 		</div>
 <!-- Navigation END -->
-		
+
+<div class="budskab">
+		<h1>En unik og velsmagende madoplevelse</h1>
+</div>
+
 		<div class="content">
-				
+
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/I2uas754LhY?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-			
+
 		</div>
 	</div>
 		</div>
-		
-		
+
+
 <footer>
 	<div class="footerleft">
 		<br><br>
 <h3>Frederiksborggade 1B, 4th<br>
 			1360 København K</h3>
-		
+
 		<p><a href="mailto:info@gastronomiskinnovation.dk">info@gastronomiskinnovation.dk</a><br>
 			+45 3110 6953</p></div>
-	
+
 	<div class="footermiddle">
 	<br><br>
 	<img src="billeder/if_facebook_2308066.png" style="height: 50px" alt="Facebook"/>
     <img src="billeder/if_instagram_2308118.png" style="height: 50px" alt="Instagram"/></div>
-	
+
 	<div class="footerright">
 	<h2>Tilmeld dig vores nyhedsmail</h2>
 <p><input type="text" name="name" value="Navn"></p>
 <p><input type="email" name="email" value="Email"></p>
   </div>
 </footer>
-	
+
 	</body>
 </html>
