--- a/events.html
+++ b/events.html
@@ -3,19 +3,18 @@
 <head>
 <!-- Google analytics -->
 
-<!-- MAtias test -->
-<!-- Rikke test -->
 
 <!-- *** Metatags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <!-- Metatags END -->
 
     <title>Gastronomisk innovation</title>
 
 <!-- *** Stylesheets -->
 	<link href="stylesheets/css.css" rel="stylesheet" type="text/css">
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
 <!-- Stylesheets END -->
 </head>
@@ -36,7 +35,7 @@
 			<div id="cssmenu">
 				<ul>
 					<li><a href="index.html">Forside</a></li>
-					<li><a href="events.html">Events</a></li>
+					<li><a class="active" href="events.html">Events</a></li>
 					<li><a href="team.html">Team</a></li>
 					<li><a href="kontakt.php">Kontakt</a></li>
 				</ul>
@@ -197,8 +196,8 @@
 
 	<div class="footerright">
 	<h2>Tilmeld dig vores nyhedsmail</h2>
-<p><input type="text" name="name" value="Navn"></p>
-<p><input type="email" name="email" value="Email"></p>
+<input type="text" name="name" value="Navn"></p>
+<input type="email" name="email" value="Email"></p>
   </div>
 </footer>
 
