--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="navigationwrapper">
 			<div id="cssmenu">
 				<ul>
-					<li><a href="index.html">Forside</a></li>
+					<li><a class="active" href="index.html">Forside</a></li>
 					<li><a href="events.html">Events</a></li>
 					<li><a href="team.html">Team</a></li>
 					<li><a href="kontakt.php">Kontakt</a></li>
