--- a/events.html
+++ b/events.html
@@ -36,7 +36,7 @@
 			<div id="cssmenu">
 				<ul>
 					<li><a href="index.html">Forside</a></li>
-					<li><a href="events.html">Events</a></li>
+					<li><a class="active" href="events.html">Events</a></li>
 					<li><a href="team.html">Team</a></li>
 					<li><a href="kontakt.php">Kontakt</a></li>
 				</ul>
