--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
 				<ul>
 					<li><a href="index.html">Forside</a></li>
 					<li><a href="events.html">Events</a></li>
-					<li><a href="team.html">Team</a></li>
+					<li><a class="active" href="team.html">Team</a></li>
 					<li><a href="kontakt.php">Kontakt</a></li>
 				</ul>
 			</div>
